--- a/README.html
+++ b/README.html
@@ -1,3 +1,8 @@
-# WEB
-My all Java Web repository
-新肺炎实时动态-4.0版本
+新肺炎实时动态查看 -V4.0 版本
+       因为数据使通过后台程序进行更新的，所以数据库和映射文件没有放出来，大家可以根据代码自己编写数据更新代码！
+
+前台文件我已经压缩过了。
+
+因为可视化插件过大，而服务器带宽又低，所以可视化加载需要 5秒左右！
+
+如果有什么好的功能大家可以联系我共同添加哦！ Q：1040691703 试例网站
